objects/Conga__c.object
<CustomObject>
    <fields>
        <fullName>Filed_Articles_ND_LLC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles - ND - LLC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_NE_Corp_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWw17&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles - NE - Corp Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_NE_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles - NE - Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_SC_Corp_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWw5c&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles - SC - Corp Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_SC_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles - SC - Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_UT_Corp_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWw5h&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles - UT - Corp Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_UT_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles - UT - Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_UT_LLC_Manager_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles UT LLC Manager Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_UT_LLC_Member_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed Articles UT LLC Member Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_UT_Manager_Managed__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWw5m&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles UT Manager Managed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Articles_UT_Mem_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FWw5r&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filed Articles UT Mem Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form1583_CA_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form1583 - CA - Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_1583_CA_Corp_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z6f00000LzUJk&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form 1583 - CA - Corp - Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_1583_CA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form 1583 - CA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_1583_FL_Corp_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z6f00000LzUJf&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form 1583 - FL - Corp - Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_1583_FL_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form 1583 - FL - Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_1583_Trigger_CA__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z6f00000LzU2T&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form 1583 Trigger - CA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_1583_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z6f00000LzTKx&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form 1583 Trigger - FL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_1583__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form 1583 - FL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_2553__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form 2553</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_8822_B_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0zU000000CWCUv&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form 8822 B Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_8822_B__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form 8822 - B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_8832_Late_Election_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z4P00000GTZtG&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form 8832 - Late Election Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_8832_Late_Election__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form 8832 - Late Election</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_8832_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z4P00000GTZtB&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form 8832 Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_8832__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form 8832</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_IRS_2553_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z4P00000GTl6V&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form 2553 Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Accountable_PLan_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000D4Nx2,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; + 
&quot;&amp;reportid=[Account1]00O0B000003Sefw&quot; + 
&quot;&amp;bml=Generating LLC Accountable Plan&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;templateid=a0z6f00000QfTJA&quot; + 
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LLC Accountable PLan Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Accountable_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LLC Accountable Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_Binder_Doc_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; + 
&quot;&amp;bml=Generating LLC Binder Documents,Generating LLC Binder Documents&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;templateid=&quot; +  Conga_LLC_Template_Selection__c  + &quot; &quot; + 
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fyj5WAA&quot; + 	
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LLC Binder Doc Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Binder_Docs_Digital_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;templateid=&quot; +   LLC_Digital_Binder_Doc_Template__c + &quot; &quot; + 
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fyj5WAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LLC Binder Docs Digital Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Binder_Docs_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LLC Binder Docs - Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_Binder_Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LLC Binder Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_Digital_Binder_Doc_Template__c</fullName>
        <formula>Entity__r.LLC_Digital_Corp_Binder_Docs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LLC Digital Binder Doc Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Member_Managed_Binder_Doc_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;templateid=&quot; + Conga_Member_Managed_Template__c + &quot; &quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fyj5WAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LLC Member Managed Binder Doc Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Member_Managed_Binder_Docs_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LLC Member Managed Binder Docs - Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_Member_Managed_Binder_Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LLC Member Managed Binder Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_Member_Managed_Digital_Template__c</fullName>
        <formula>Entity__r.Member_Managed_Digital_Binder_Docs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LLC Member Managed Digital Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Agreement_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; +  Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;templateid=a0z4P00000GTOUn&quot; + 
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Management Agreement Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Management Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Reimbursement_Agreement_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; +  Entity_ID__c  +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;templateid=a0z4P00000GTRSm&quot; + 
&quot;&amp;bml=Generating Medical Reimbursement Agreement&quot; + 
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medical Reimbursement Agreement Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Reimbursement_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Reimbursement Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Managed_Digital_Binder_Doc_Trigg__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;templateid=&quot; + LLC_Member_Managed_Digital_Template__c + &quot; &quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fyj5WAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Managed  Digital Binder Doc Trigg</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROBS_401_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl,[trustee]a100B00000Gy3Km&quot; + 
&quot;&amp;templateid=a0z0B00000FXcAq&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fyj5WAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROBS 401 Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROBS_401k_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROBS - 401k Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROBS_PSP_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROBS - PSP Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROBS_PSP_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl,[trustee]a100B00000Gy3Km&quot; + 
&quot;&amp;templateid=a0z0B00000FXcAl&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fyj5WAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROBS PSP Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resignation_of_Incorporater_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;templateid=a0z4P00000GTMGL&quot; + 
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resignation of Incorporater Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resignation_of_Incorporator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resignation of Incorporator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resignation_of_Organizer_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; + 
&quot;&amp;templateid=a0z4P00000GTMH9&quot; + 
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resignation of Organizer Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resignation_of_Organizer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resignation of Organizer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS4_Corporation_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z0B00000FRJQU&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS4 Corporation Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS4_Corporation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SS4 - Corporation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solo_401K_Binder_Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solo 401K Binder Docs </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solo_401k_Binder_Doc_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[account]a100B00000DJ4jZ,[SH1]a100B00000DHkoK,[SH2]a100B00000DHksG,[SH3]a100B00000DHksa,[SH4]a100B00000DHkwh,[Dir1]a100B00000DHkwr,[Dir2]a100B00000DHl1F,[Dir3]a100B00000DHkxW,[Dir4]a100B00000DHkxb,[Dir5]a100B00000DHkxg,[Dir6]a100B00000DHkxl,[trustee]a100B00000Gy3Km&quot; + 
&quot;&amp;templateid=a0z0B00000FXeDf&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fyj5WAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solo 401k Binder Doc Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X8832_Late_Election_trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Entity_ID__c +
&quot;&amp;queryid=[EM]a104P00000O52xJ,[account]a100B00000DJ4jZ&quot; +
&quot;&amp;templateid=a0z4P00000GTZtG&quot; +
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=0DB4P000000fykwWAA&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>8832 - Late Election trigger</label>
        <type>Text</type>
    </fields>
    <label>Entity Conga Docs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_Conga</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Conga Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Conga Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>